// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ce-text renders 1`] = `
<ce-text>
  <mock:shadow-root>
    <p class="text">
      <slot></slot>
    </p>
  </mock:shadow-root>
</ce-text>
`;

exports[`sc-text renders 1`] = `
<sc-text>
  <mock:shadow-root>
    <p class="text">
      <slot></slot>
    </p>
  </mock:shadow-root>
</sc-text>
`;
